--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -6,28 +6,65 @@
 {% block body %}
 
 <div class="main-content">
-<nav class="nav-bar"></nav>
-    <div id='calendar'></div>
+<nav>
+  <div class="logo">
 
-    <div id="event-form">
-        <h2>Add New Event</h2>
-        <form id="add-event-form" action="/add_event" method="POST">
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="title" required>
-            <label for="start">Start Date and Time:</label>
-            <input type="datetime-local" id="start" name="start" required>
-            <label for="end">End Date and Time:</label>
-            <input type="datetime-local" id="start" name="end" required>
-            <label for="eventType">Event Type:</label>
-        <select id="eventType" name="type">
-            <option value="practice">Practice Event</option>
-            <option value="game">Game Event</option>
-            <option value="other">Other Event</option>
-        </select>
-
-            <button type="submit">Add Event</button>
-        </form>
+  </div>
+  <ul class="nav-links">
+    <p>Calender</p>
+  </ul>
+  <div class="nav-icons">
+    <div class="notification">
+      <i class='bx bxs-bell bx-tada-hover' ></i>
+      <span class="badge">3</span>
+    </div> 
+    <div class="logout" >
+      <a href="/logout">
+      <i class='bx bx-log-in-circle'  ></i></a>
     </div>
+  </div>
+  <div class="burger">
+    <div class="line1"></div>
+    <div class="line2"></div>
+    <div class="line3"></div>
+  </div>
+</nav>
+    <div id='calendar'></div>
+ <!-- Modal -->
+ <!-- <div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="eventModalLabel">Event Details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="eventModalBody">
+          Event details will be inserted here
+        </div>
+      </div>
+    </div>
+  </div> -->
+  {% if role == 'Admin' %}
+  <div id="event-form">
+      <h2>Add New Event</h2>
+      <form id="add-event-form" action="/add_event" method="POST">
+          <label for="title">Title:</label>
+          <input type="text" id="title" name="title" required>
+          <label for="start">Start Date and Time:</label>
+          <input type="datetime-local" id="start" name="start" required>
+          <label for="end">End Date and Time:</label>
+          <input type="datetime-local" id="start" name="end" required>
+          <label for="eventType">Event Type:</label>
+      <select id="eventType" name="type">
+          <option value="practice">Practice Event</option>
+          <option value="game">Game Event</option>
+          <option value="other">Other Event</option>
+      </select>
+
+          <button type="submit" class = 'button' >Add Event</button>
+      </form>
+  </div>
+  {% endif %}
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js" integrity="sha256-i4vDW9EgtaJmeauDDymtNF2omPZ1fCKpf4w1gBlU1IE=" crossorigin="anonymous"></script>
@@ -71,23 +108,6 @@
 </script>
 
 {% endblock %}
-  <!-- <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/core/main.min.css" rel="stylesheet">
-
-  <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core/main.min.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid/main.min.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction/main.min.js"></script>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-
-    .modal-content {
-      padding: 20px;
-    }
-  </style> -->
 <!-- [
             {
               title: 'Event 1',
