--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="/inventory">
                     <i class='bx bx-sm bx-home-alt bx-tada-hover' ></i>
                     <span class="nav-item">Inventory</span>
                 </a>
